# last-work

./: .gitignore  CMakeLists.txt  README.md  build_exe.py  expert_system_gui.py  main.py  pyproject.toml  requirements.txt  rules.json  web_server.py
cpp_py/bcpp/: Rule_reasoner.bcpy.cpp
cpp_py/cpp/: Rule_reasoner.cpy.cpp
docs/: 推理引擎详解.md  项目总结.md
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/views/: AdminView.vue  HistoryView.vue  HomeView.vue  InferenceView.vue  LayoutView.vue  LoginView.vue
src/: __init__.py
src/core/: Rule_reasoner.cp312-win_amd64.pyd  Rule_reasoner.cpy.cpp  Rule_reasoner.pyi  __init__.py  reasoner.py
src/data/: __init__.py  constants.py  storage.py
src/gui/: __init__.py  dialogs.py  graph_widget.py  main_window.py
src/web/: __init__.py  server.py
web_frontend/: index.html  vite.config.js
web_frontend/src/: App.vue  main.js
web_frontend/src/api/: index.js
web_frontend/src/router/: index.js
web_frontend/src/views/: HistoryView.vue  HomeView.vue  InferenceView.vue  LayoutView.vue
